wip adjusted properties

--- a/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
@@ -117,6 +117,14 @@
                  <name>hadoop.proxyuser.oozie.groups</name>
                  <value>*</value>
                </property>
+               <property>
+                 <name>hadoop.proxyuser.root.hosts</name>
+                 <value>{{ ansible_nodename }}</value>
+               </property>
+               <property>
+                 <name>hadoop.proxyuser.root.groups</name>
+                 <value>*</value>
+               </property>
       insertbefore: "</configuration>"
       backup: yes
 
