--- a/ansible/playbooks/provision/roles/aervits.phoenix/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.phoenix/tasks/main.yml
@@ -6,17 +6,32 @@
       dest: "/tmp/{{ phoenix_version }}.bin.tar.gz"
       checksum: "md5:{{ phoenix_md5_sum }}"
 
+  - name: create phoenix directory
+    file:
+      path: /opt/phoenix
+      state: directory
+      owner: hbase
+      group: hbase
+      mode: 0775
+
   - name: extract phoenix release
     unarchive:
       src: "/tmp/{{ phoenix_version }}.bin.tar.gz"
-      dest: /tmp
+      dest: /opt/phoenix
       remote_src: yes
       keep_newer: yes
-      creates: "/tmp/{{ phoenix_version }}-bin"
+      creates: "/opt/phoenix/{{ phoenix_version }}-bin"
+
+  - name: export PHOENIX_HOME
+    lineinfile:
+      path: /etc/environment
+      line: export PHOENIX_HOME="/opt/phoenix/{{ phoenix_version }}-bin"
+      state: present
+      create: yes
 
   - name: copy phoenix jar to hbase directory
     copy:
-      src: "/tmp/{{ phoenix_version }}-bin/phoenix-5.0.0-alpha-HBase-2.0-server.jar"
+      src: "/opt/phoenix/{{ phoenix_version }}-bin/phoenix-5.0.0-alpha-HBase-2.0-server.jar"
       dest: "$HBASE_HOME/lib"
       owner: hbase
       group: hbase
