--- a/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
@@ -32,12 +32,12 @@
 
 ### does not work as part of Ansible run, only manual so far
 
-  - name: compile oozie from source
-    command: "/tmp/{{ oozie_version }}/bin/mkdistro.sh -Phadoop-2 -Dhadoop.version={{ hadoop_version }} -DskipTests=true -Puber -DtargetJavaVersion=1.8 -DjavaVersion=1.8"
-    args:
-      creates: "/tmp/{{ oozie_version }}/distro/target/{{ oozie_version }}-distro/{{ oozie_version }}"
-    become: true
-    become_user: oozie
+#  - name: compile oozie from source
+#    command: "/tmp/{{ oozie_version }}/bin/mkdistro.sh -Phadoop-2 -Dhadoop.version={{ hadoop_version }} -DskipTests=true -Puber -DtargetJavaVersion=1.8 -DjavaVersion=1.8"
+#    args:
+#      creates: "/tmp/{{ oozie_version }}/distro/target/{{ oozie_version }}-distro/{{ oozie_version }}"
+#    become: true
+#    become_user: oozie
 
   - name: create oozie directory
     file:
