--- a/ansible/playbooks/provision/hbase-playbook.yml
+++ b/ansible/playbooks/provision/hbase-playbook.yml
@@ -7,6 +7,7 @@
     - aervits.hosts
     - aervits.hadoop
     - aervits.hbase
+    - aervits.devtools
   remote_user: vagrant
   become: true
   vars:
