--- a/ansible/playbooks/provision/hbase-playbook.yml
+++ b/ansible/playbooks/provision/hbase-playbook.yml
@@ -8,6 +8,8 @@
     - aervits.hadoop
     - aervits.hbase
     - aervits.devtools
+    - aervits.common
+    - aervits.zookeeper
   remote_user: vagrant
   become: true
   vars:
