--- a/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
@@ -1,5 +1,5 @@
 ---
 # vars file for aervits.hbase
-  hbase_version: "hbase-1.4.2"
-  hbase_url: "http://www-us.apache.org/dist/hbase/{{ hbase_version }}/{{ hbase_version }}-bin.tar.gz"
-  hbase_md5_sum: C373F5684DF417FC63104B5799F9EC9B
+  hbase_version: "hbase-2.0.0-beta-2"
+  hbase_url: "https://dist.apache.org/repos/dist/dev/hbase/{{ hbase_version }}.RC0/{{ hbase_version }}-bin.tar.gz"
+  hbase_md5_sum: 923F31AB4FE0F27FDE30A2E716B9A0C6
