--- a/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
@@ -63,3 +63,10 @@
       line: export HADOOP_CLASSPATH=`hbase classpath`
       state: present
       create: yes
+
+ # move this to users role to avoid duplication in other playbooks, i.e. hadoop, hbase
+
+  - name: set up passwordless ssh for service user
+    shell: cat ~/.ssh/id_rsa.pub > ~/.ssh/authorized_keys
+    become: true
+    become_user: hbase
