--- a/ansible/playbooks/provision/phoenix-playbook.yml
+++ b/ansible/playbooks/provision/phoenix-playbook.yml
@@ -5,6 +5,7 @@
     - aervits.ssh
     - aervits.users
     - aervits.hosts
+    - aervits.common
     - aervits.hadoop
     - aervits.hbase
     - aervits.phoenix
