--- a/ansible/playbooks/provision/roles/aervits.devtools/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.devtools/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # defaults file for aervits.devtools
-  maven_version: "apache-maven-3.5.2"
-  maven_url: "http://ftp.wayne.edu/apache/maven/maven-3/3.5.2/binaries/{{ maven_version }}-bin.tar.gz"
-  maven_md5_sum: 948110de4aab290033c23bf4894f7d9a
+  maven_version: "apache-maven-3.5.3"
+  maven_url: "http://mirror.cogentco.com/pub/apache/maven/maven-3/3.5.3/binaries/{{ maven_version }}-bin.tar.gz"
+  maven_md5_sum: 51025855d5a7456fc1a67666fbef29de
