--- a/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
@@ -4,7 +4,7 @@
     get_url:
       url: "{{ hbase_url }}"
       dest: "/tmp/{{ hbase_version }}.bin.tar.gz"
-      checksum: "md5:{{ hbase_md5_sum }}"
+      checksum: "sha512:{{ hbase_sha_sum }}"
 
   - name: create hbase directory
     file:
