--- a/ansible/playbooks/provision/roles/aervits.oozie/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/defaults/main.yml
@@ -1,6 +1,5 @@
 ---
 # defaults file for aervits.oozie
-  oozie_rc_version: "4.3.1"
-  oozie_version: "oozie-4.3.1"
-  oozie_tar_url: "http://www-us.apache.org/dist/oozie/{{ oozie_rc_version }}/{{ oozie_version }}.tar.gz"
-  oozie_md5_sum: aabe4a0d415d2b930a69657338fd5101
+  oozie_version: "oozie-5.0.0"
+  oozie_tar_url: "https://people.apache.org/~andras/{{ oozie_version }}-rc0/{{ oozie_version }}.tar.gz"
+  oozie_sha_sum: F02DA16BF93236552BEEBE6CEA9886BAFD2175CD5799C35667026CDF8B94C546CE10FB0E714D190301A1A3A71AFA8F41888EEAB86E45A67D87ABD93C6CC2E76F
