--- a/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
@@ -39,93 +39,93 @@
 #    become: true
 #    become_user: oozie
 
-  - name: create oozie directory
-    file:
-      path: /opt/oozie
-      state: directory
-      owner: oozie
-      group: oozie
-      mode: 0775
+#  - name: create oozie directory
+#    file:
+#      path: /opt/oozie
+#      state: directory
+#      owner: oozie
+#      group: oozie
+#      mode: 0775
 
 ### not indempotant, won't work 2nd time around
 
-  - name: move compiled oozie to destination
-    command: mv "/tmp/{{ oozie_version }}/distro/target/{{ oozie_version }}-distro/{{ oozie_version }}" /opt/oozie/
+  # - name: move compiled oozie to destination
+  #   command: mv "/tmp/{{ oozie_version }}/distro/target/{{ oozie_version }}-distro/{{ oozie_version }}" /opt/oozie/
+  #
+  # - name: export OOZIE_HOME
+  #   lineinfile:
+  #     path: /etc/environment
+  #     line: export OOZIE_HOME="/opt/oozie/{{ oozie_version }}"
+  #     state: present
+  #     create: yes
 
-  - name: export OOZIE_HOME
-    lineinfile:
-      path: /etc/environment
-      line: export OOZIE_HOME="/opt/oozie/{{ oozie_version }}"
-      state: present
-      create: yes
-
-  - name: alias oozie command
-    lineinfile:
-      path: /etc/bashrc
-      line: alias oozie=$OOZIE_HOME/bin/oozie
-      state: present
-      create: yes
-
-  - name: create libext directory
-    file:
-      path: "$OOZIE_HOME/libext"
-      state: directory
-      owner: oozie
-      group: oozie
-      mode: 0775
-
-  - name: create spark-conf directory
-    file:
-      path: "$OOZIE_HOME/conf/spark-conf"
-      state: directory
-      owner: oozie
-      group: oozie
-      mode: 0775
-
-  - name: download extjs and place in libext
-    get_url:
-      url: http://archive.cloudera.com/gplextras/misc/ext-2.2.zip
-      dest: $OOZIE_HOME/libext
-
-  - name: add oozie specific core-site.xml properties
-    blockinfile:
-      path: $HADOOP_HOME/etc/hadoop/core-site.xml
-      block: |
-               <!-- OOZIE -->
-               <property>
-                 <name>hadoop.proxyuser.oozie.hosts</name>
-                 <value>{{ ansible_nodename }}</value>
-               </property>
-               <property>
-                 <name>hadoop.proxyuser.oozie.groups</name>
-                 <value>*</value>
-               </property>
-               <property>
-                 <name>hadoop.proxyuser.root.hosts</name>
-                 <value>{{ ansible_nodename }}</value>
-               </property>
-               <property>
-                 <name>hadoop.proxyuser.root.groups</name>
-                 <value>*</value>
-               </property>
-      insertbefore: "</configuration>"
-      backup: yes
-
-  - name: add oozie specific core-site.xml properties in oozie hadoop-conf dir
-    blockinfile:
-      path: $OOZIE_HOME/conf/hadoop-conf/core-site.xml
-      block: |
-               <!-- OOZIE -->
-               <property>
-                 <name>hadoop.proxyuser.oozie.hosts</name>
-                 <value>{{ ansible_nodename }}</value>
-               </property>
-               <property>
-                 <name>hadoop.proxyuser.oozie.groups</name>
-                 <value>*</value>
-               </property>
-      insertbefore: "</configuration>"
-      backup: yes
+  # - name: alias oozie command
+  #   lineinfile:
+  #     path: /etc/bashrc
+  #     line: alias oozie=$OOZIE_HOME/bin/oozie
+  #     state: present
+  #     create: yes
+  #
+  # - name: create libext directory
+  #   file:
+  #     path: "$OOZIE_HOME/libext"
+  #     state: directory
+  #     owner: oozie
+  #     group: oozie
+  #     mode: 0775
+  #
+  # - name: create spark-conf directory
+  #   file:
+  #     path: "$OOZIE_HOME/conf/spark-conf"
+  #     state: directory
+  #     owner: oozie
+  #     group: oozie
+  #     mode: 0775
+  #
+  # - name: download extjs and place in libext
+  #   get_url:
+  #     url: http://archive.cloudera.com/gplextras/misc/ext-2.2.zip
+  #     dest: $OOZIE_HOME/libext
+  #
+  # - name: add oozie specific core-site.xml properties
+  #   blockinfile:
+  #     path: $HADOOP_HOME/etc/hadoop/core-site.xml
+  #     block: |
+  #              <!-- OOZIE -->
+  #              <property>
+  #                <name>hadoop.proxyuser.oozie.hosts</name>
+  #                <value>{{ ansible_nodename }}</value>
+  #              </property>
+  #              <property>
+  #                <name>hadoop.proxyuser.oozie.groups</name>
+  #                <value>*</value>
+  #              </property>
+  #              <property>
+  #                <name>hadoop.proxyuser.root.hosts</name>
+  #                <value>{{ ansible_nodename }}</value>
+  #              </property>
+  #              <property>
+  #                <name>hadoop.proxyuser.root.groups</name>
+  #                <value>*</value>
+  #              </property>
+  #     insertbefore: "</configuration>"
+  #     backup: yes
+  #
+  # - name: add oozie specific core-site.xml properties in oozie hadoop-conf dir
+  #   blockinfile:
+  #     path: $OOZIE_HOME/conf/hadoop-conf/core-site.xml
+  #     block: |
+  #              <!-- OOZIE -->
+  #              <property>
+  #                <name>hadoop.proxyuser.oozie.hosts</name>
+  #                <value>{{ ansible_nodename }}</value>
+  #              </property>
+  #              <property>
+  #                <name>hadoop.proxyuser.oozie.groups</name>
+  #                <value>*</value>
+  #              </property>
+  #     insertbefore: "</configuration>"
+  #     backup: yes
 
 #  - name: get jars for libext
 #    command: "find $OOZIE_HOME/server/target/dependency -type f"
