--- a/ansible/playbooks/Vagrantfile
+++ b/ansible/playbooks/Vagrantfile
@@ -71,7 +71,7 @@ Vagrant.configure("2") do |config|
   # SHELL
 
   config.vm.provision "ansible" do |ansible|
-     ansible.playbook = "provision/dev-playbook.yml"
+     ansible.playbook = "provision/oozie-playbook.yml"
 
     # enable for debugging
     # ansible.verbose = "vvv"
